fixed logo alignment

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ header {
 
 .header-logo {
     padding-top: 20px;
+    margin-left: -50px;
 }
 
 .header-items h4 {
@@ -405,8 +406,8 @@ input[type=text], input[type=email], select, textarea {
     border: 1px solid #777777; 
     border-radius: 4px; 
     box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
+    margin-top: 12px; 
+    margin-bottom: 24px; 
     font-family: 'Raleway', sans-serif;
 }  
 
@@ -416,8 +417,9 @@ textarea {
 }
 
 .contact-me {
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
 
 .contact-me h2 {
@@ -442,6 +444,14 @@ textarea {
     list-style: disc;
     line-height: 24px !important;
     font-size: 18px !important;
+}
+
+label {
+    font-weight: bold;
+}
+
+input {
+    
 }
 
 #about-link {
@@ -520,10 +530,22 @@ textarea {
         grid-template-columns: repeat(3, 1fr); 
     }
 
-    .about-me, .contact-me {
+    .about-me {
             margin-left: 280px;
             margin-right: 230px;
-        }
+    }
+
+    .contact-me {
+        margin: auto;
+}
+
+    .contact-me {
+        padding-left: 150px;
+        padding-right: 150px;
+        max-width: 1000px;
+    }
+
+
 
 }
 
